# parser_microservice

./: .gitignore  Dockerfile  README.md  broker.py  docker-compose.yml  main.py  pyproject.toml  tasks.py
