[project]
name = "parser-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "redis>=6.4.0",
    "taskiq>=0.11.20",
    "taskiq-aio-pika>=0.4.4",
    "taskiq-redis>=1.1.2",
    "uvicorn>=0.38.0",
]
